[project]
name = "pilco-py"
version = "0.1.0"
description = "Readable Hamaya-style assistive arm learning using NumPy, PyTorch, and GPyTorch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpytorch>=1.14",
    "imageio>=2.37.0",
    "matplotlib>=3.10.0",
    "numpy>=2.1.0",
    "torch>=2.6.0",
]

[project.scripts]
pilco-train = "pilco_py.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
